--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" crossorigin="anonymous"></script>
+		<script src="fadeSection.js"></script>
 		<title>Ricky Chen</title>
 	</head>
 	<body>
@@ -45,24 +47,24 @@
 			</nav>
 				<!-- Nav Bar End -->
 			<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
-				<div class="container text-center text-bottom fadeInEffect7">
-			      <h1 class="display-1 text-secondary text-uppercase">Ricky Chen</h1>
-			      <p class="display-4 text-white d-none d-sm-block">BS in Computer Science</p>
-			      <p class="lead text-white">San Francisco, California</p>
-			      <p class="lead text-white">Email: rickychen10@gmail.com</p>
-				  <p class="lead text-white">(415) 608-4948</p>
+				<div class="container text-center text-bottom fadeInEffect5">
+			      <h1 class="display-1 text-secondary text-uppercase fadeInEffect7">Ricky Chen</h1>
+			      <p class="display-4 text-white d-none d-sm-block fadeInEffect7">BS in Computer Science</p>
+			      <p class="lead text-white fadeInEffect7">San Francisco, California</p>
+			      <p class="lead text-white fadeInEffect7">Email: rickychen10@gmail.com</p>
+				  <p class="lead text-white fadeInEffect7">(415) 608-4948</p>
 			    </div>
 			</section>
-			<section class="parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride" id="sectionSkillBar">
+			<section id="sectionSkillBar" class="parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride">
 				<div class="row">
-					<div class="col-12">
-						<div class="container text-center text-bottom fadeInEffect7">
+					<div id="skilBar"  class="col-12">
+						<div class="container text-center text-bottom">
 					      <h1 class="display-5 text-secondary text-uppercase">Professional:</h1>
 					      <p class="display-6 text-secondary d-none d-sm-block">My Skill Level Breakdown</p>
 					    </div>
 					</div>
-					<div class="col-12">
-						<div class="fadeInEffect20">
+					<div id="percentBars" class="col-12">
+						<div>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-success" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="text-secondary">42%</span>
 							</div>
@@ -84,25 +86,24 @@
 			</section>
 
 			<section class="parallaxBottom" id="sectionTopInfo">
-
-			  <!--<ul class="list-group">
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
-		  	  <li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
-		    </ul>-->
+				  <!--<ul class="list-group">
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
+			  	  <li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
+			    </ul>-->
 				<div class="row">
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect12 topper">
+					<div id="educationBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 					  <div class="h1"><i class="fa fa-graduation-cap text-secondary mb-4" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Education</h3>
 					  <p class="text-center">
@@ -118,7 +119,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect16 topper">
+					<div id="awardsBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 					  <div class="h1"><i class="fa fa-award text-secondary mb-4" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Awards</h3>
 					  <p class="text-center">
@@ -133,7 +134,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 fadeInEffect20 topper">
+					<div id="clubsBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 					  <div class="h1"><i class="fa fa-sitemap text-secondary mb-4" aria-hidden="true"></i></div>
 					  <h3 class="h4 mb-4 text-center">Clubs</h3>
 					  <p>
@@ -150,61 +151,76 @@
 							</div>
 						</div>
 					</div>
-
-					<div class="col-12 d-flex flex-column align-items-center mb-5">
-
-						<h2 class="display-4 text-secondary text-center">Projects:</h2>
-						 <div id="carousel" class="carousel slide" data-ride="carousel">
-						   <ol class="carousel-indicators">
-							 <li data-target="#carousel" data-slide-to="0" class="active"></li>
-							 <li data-target="#carousel" data-slide-to="1"></li>
-							 <li data-target="#carousel" data-slide-to="2"></li>
-							 <li data-target="#carousel" data-slide-to="3"></li>
-						   </ol>
-						   <div class="carousel-inner" role="listbox">
-							 <div class="carousel-item active">
-							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #1" class="d-block img-fluid">
-							   <div class="carousel-caption">
-								 <h3 class="display-4">Project 1</h3>
-								 <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-							   </div>
-							 </div>
-							 <div class="carousel-item">
-							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #2" class="d-block img-fluid">
-							   <div class="carousel-caption">
-								   <h3 class="display-4">Project 2</h3>
-								 <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-							   </div>
-							 </div>
-							 <div class="carousel-item">
-							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #3" class="d-block img-fluid">
-							   <div class="carousel-caption">
-								   <h3 class="display-4">Project 3</h3>
-								<p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-							   </div>
-							 </div>
-							 <div class="carousel-item">
-							   <img src="https://i.imgur.com/MzHbMKT.png" alt="Slide #4" class="d-block img-fluid">
-							   <div class="carousel-caption">
-								   <h3 class="display-4">Project 4</h3>
-								 <p>Bacon ipsum dolor amet beef ribs pork chop pastrami spare ribs, </p>
-							   </div>
-							 </div>
-						   </div>
-						   <a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
-							 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							 <span class="sr-only">Previous</span>
-						   </a>
-						   <a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
-							 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-							 <span class="sr-only">Next</span>
-						   </a>
-						 </div>
+				</div>
+				<div id="projectBoxes1" class="row">
+					<div class="col-3 projectBoxes11">
+						<div class="container text-center text-bottom vertical-center">
+					      <h1 class="display-5 text-secondary text-uppercase">Auto Pilot</h1>
+					    </div>
+					</div>
+					<div class="col-3 projectBoxes12">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-secondary text-uppercase">Chat Line</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes13">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-secondary text-uppercase">Messenger SQL</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes14">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-secondary text-uppercase">Audit VBA Macro</h1>
+						</div>
+					</div>
+				</div>
+				<div id="projectBoxes2" class="row">
+					<div class="col-3 projectBoxes21">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes22">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes23">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes24">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+				</div>
+				<div id="projectBoxes3" class="row">
+					<div class="col-3 projectBoxes31">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes32">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes33">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes34">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						</div>
 					</div>
 				</div>
 			</section>
 			</div>
-			<footer class="bg-light">
+			<footer id="1234" class="bg-light">
 				<div class="container py-3 py-sm-5">
 					<div class="row">
 						<div class="col-3 col-sm-6 col-lg-3">
